--- a/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
@@ -161,18 +161,18 @@
  POL_remember_niklots_sacriface:0 "Увековечить жертву Никлота"
  POL_remember_niklots_sacriface_desc:0 "Никлот был последним независимым князем бодричей, одного из славянских племен на территории нынешней Германии. Он противостоял датским и немецким крестоносцам до последнего вздоха, и когда страна вновь оказывается перед великим испытанием, его подвиг оживает в наших сердцах."
  POL_revengeance_on_enemy_with_god_and_even_in_spite_of_god:0 "Отмщение врагу"
- POL_revengeance_on_enemy_with_god_and_even_in_spite_of_god_desc:0 "Окружённая врагами, всю свою историю Польша вынуждена была выживать. Но сейчас настал тот момент, когда все они погрязли в смятении, а мы стали сильны как никогда раньше. Сама судьба благоволит к исторической справедливости. Готовьте армию! Пришло время отмщения."
+ POL_revengeance_on_enemy_with_god_and_even_in_spite_of_god_desc:0 "Окружённая врагами, всю свою историю Польша вынуждена была выживать. Но сейчас настал тот момент, когда все они погрязли в смятении, а мы стали сильны как никогда раньше. Сама судьба благоволит к исторической справедливости. Готовьте армию, пришло время отмщения и мы отомстим с Богом — и даже вопреки Богу!"
  POL_eliminate_przechrztowie:0 "Запретить пшехштовье"
  POL_eliminate_przechrztowie_desc:0 "Зыгмунт Красинский в своей книге «Небожественная комедия» предупредил польский народ об опасности, исходящей от пшехштов — евреев, которые крестились, чтобы было легче управлять людьми, а позже использовать непросвещенные массы для установления своего контроля над страной."
  POL_return_of_ancient_faith:0 "Возвращение древней веры"
- POL_return_of_ancient_faith_desc:0 "Наконец-то мы ослабили католическую церковь и освободили все святые места славянской веры! Работы ещё много, но теперь мы можем помочь народам восстановить верования наших общих предков."
+ POL_return_of_ancient_faith_desc:0 "Наконец-то мы ослабили католическую церковь и освободили все святые места славянской веры! Работы ещё много, но теперь мы можем помочь народам восстановить верования наших общих предков и создать единую родноверскую церковь."
  POL_incorporate_beauty_of_east:0 "Красота востока"
  POL_incorporate_beauty_of_east_desc:0 "Адам Мицкевич во многих поэмах воспевал красоту востока. Эти земли взаправду достойны стать частью великой Славии. Однако прежде их нужно защитить от тех, кто посягает на саму культуру нашего большого народа."
  POL_the_true_messiah_arrival:0 "Пришествие истинного мессии"
  POL_the_true_messiah_arrival_desc:0 "Когда-то нас считали политическими маргиналами, а мы теперь стали опорой всех славян. Но до сих пор мы не замечали самого главного — Мессия, о котором давно писал Адам Мицкевич, всё это время был рядом. Теперь ясно, что наш Стойгнев и есть тот самый сорок и четыре, который пришёл защитить и воскресить государство!"
  
  POL_oppose_sanation:0 "Противостоять Санации"
- POL_oppose_sanation_desc:0 "Квазирегентский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
+ POL_oppose_sanation_desc:0 "Милитаристский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
  
  ###ВОЕННОЕ ДРЕВО###
  
@@ -294,7 +294,7 @@
  POL_support_gdansk:0 "Деньги в Гданьск"
  POL_support_gdansk_desc:0 "Гданьск был польским городом с незапамятных времен и теперь, когда он снова в составе нашей страны, мы должны перестроить его портовую инфраструктуру. Долгие годы пребывания в бедной Померании значительно сократили его морской потенциал."
  POL_support_ursus:0 "«Урсус»"
- POL_support_ursus_desc:0 "«Урсус» — известная тракторная компания. Мы сможем заказать у них тысячи машин для обработки земли, тем самым мы добьёмся ускоренной механизации фермерства и поддержим национального производителя. В долгосрочной перспективе это действие окупится ростом наших сельскохозяйственных возможностей."
+ POL_support_ursus_desc:0 "«Урсус» — известный производитель сельскохозяйственной техники. Мы сможем заказать у них тысячи машин для обработки земли, тем самым мы добьёмся ускоренной механизации фермерства и поддержим национального производителя. В долгосрочной перспективе это действие окупится ростом наших сельскохозяйственных возможностей и укрепит позицию компании на рынке."
  POL_help_debica_tire_company:0 "Шинная компания «Дембица»"
  POL_help_debica_tire_company_desc:0 "Наша молодая производственная отрасль нуждается в поддержке. Наличие собственной шинной компании принесёт нам больший доход и поможет производить автомобили. Городок Дембица хорошо подойдёт для начала."
  POL_introudce_polish_zloty:0 "Польский злотый"
