--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -251,8 +251,8 @@
  
  ###POLAND###
  
- POL_empire_communism:0 "Polish People's Republic"
- POL_empire_communism_DEF:0 "the Polish People's Republic"
+ POL_empire_communism:0 "Polish People's Council Republic"
+ POL_empire_communism_DEF:0 "the Polish People's Council Republic"
  POL_empire_communism_ADJ:0 "Polish"
  POL_empire_democratic:0 "Greater Polish Empire"
  POL_empire_democratic_DEF:0 "the Greater Polish Empire"
@@ -277,30 +277,30 @@
  POL_rzeczpospolita_fascism_DEF:0 "the Polish State"
  POL_rzeczpospolita_fascism_ADJ:0 "Polish"
  
- POL_falanga_communism:0 "Polish Socialist Council Republic"
- POL_falanga_communism_DEF:0 "the Polish Socialist Council Republic"
+ POL_falanga_communism:0 "Polish Socialist Commune"
+ POL_falanga_communism_DEF:0 "the Polish Socialist Commune"
  POL_falanga_communism_ADJ:0 "Polish"
- POL_falanga_democratic:0 "Polish State"
- POL_falanga_democratic_DEF:0 "the Polish State"
+ POL_falanga_democratic:0 "Polish Republic"
+ POL_falanga_democratic_DEF:0 "the Polish Republic"
  POL_falanga_democratic_ADJ:0 "Polish"
- POL_falanga_neutrality:0 "Polish State"
- POL_falanga_neutrality_DEF:0 "the Polish State"
+ POL_falanga_neutrality:0 "Polish Falangist State"
+ POL_falanga_neutrality_DEF:0 "the Polish Falangist State"
  POL_falanga_neutrality_ADJ:0 "Polish"
- POL_falanga_fascism:0 "Polish State"
- POL_falanga_fascism_DEF:0 "the Polish State"
+ POL_falanga_fascism:0 "Polish Falangist State"
+ POL_falanga_fascism_DEF:0 "the Polish Falangist State"
  POL_falanga_fascism_ADJ:0 "Polish"
  
- POL_pagan_communism:0 "Polish Socialist Council Republic"
- POL_pagan_communism_DEF:0 "the Polish Socialist Council Republic"
+ POL_pagan_communism:0 "Polish Socialist Rodnovery Republic"
+ POL_pagan_communism_DEF:0 "the Polish Socialist Rodnovery Republic"
  POL_pagan_communism_ADJ:0 "Polish"
- POL_pagan_democratic:0 "Polish Slavic State"
- POL_pagan_democratic_DEF:0 "the Polish Slavic State"
+ POL_pagan_democratic:0 "Polish Rodnovery Republic"
+ POL_pagan_democratic_DEF:0 "the Polish Rodnovery Republic"
  POL_pagan_democratic_ADJ:0 "Polish"
- POL_pagan_neutrality:0 "Polish Slavic State"
- POL_pagan_neutrality_DEF:0 "the Polish Slavic State"
+ POL_pagan_neutrality:0 "Polish Rodnovery Kingdom"
+ POL_pagan_neutrality_DEF:0 "the Polish Rodnovery Kingdom"
  POL_pagan_neutrality_ADJ:0 "Polish"
- POL_pagan_fascism:0 "Polish Slavic State"
- POL_pagan_fascism_DEF:0 "the Polish Slavic State"
+ POL_pagan_fascism:0 "Polish Rodnovery Collective"
+ POL_pagan_fascism_DEF:0 "the Polish Rodnovery Collective"
  POL_pagan_fascism_ADJ:0 "Polish"
  
  POL_lechitic_communism:0 "Lechitic Union"
@@ -322,11 +322,11 @@
  POL_zapadoslavia_democratic:0 "Federal Republic of Zapadoslavia"
  POL_zapadoslavia_democratic_DEF:0 "the Federal Republic of Zapadoslavia"
  POL_zapadoslavia_democratic_ADJ:0 "Zapadoslavian"
- POL_zapadoslavia_neutrality:0 "Zapadoslavia"
- POL_zapadoslavia_neutrality_DEF:0 "Zapadoslavia"
+ POL_zapadoslavia_neutrality:0 "Zapadoslavian Kingdom"
+ POL_zapadoslavia_neutrality_DEF:0 "the Zapadoslavian Kingdom"
  POL_zapadoslavia_neutrality_ADJ:0 "Zapadoslavian"
- POL_zapadoslavia_fascism:0 "Zapadoslavia"
- POL_zapadoslavia_fascism_DEF:0 "Zapadoslavia"
+ POL_zapadoslavia_fascism:0 "Zapadoslavian State"
+ POL_zapadoslavia_fascism_DEF:0 "the Zapadoslavian State"
  POL_zapadoslavia_fascism_ADJ:0 "Zapadoslavian"
  
  POL_slavic_communism:0 "Union of Slavic States"
