--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -80,8 +80,8 @@
  SWI_fascism_party_long:0 "Sonderbund League"
  HOL_communism_party:0 "Jacobin Party"
  HOL_communism_party_long:0 "Dutch Jacobin Party"
- HOL_neutrality_party:0 "Orange Restorationists"
- HOL_neutrality_party_long:0 "House Orange-Nassau Loyalists"
+ HOL_neutrality_party:0 "Bonaparte Loyalists"
+ HOL_neutrality_party_long:0 "House Bonaparte Loyalists"
  HOL_democratic_party:0 "Liberal State Party"
  HOL_democratic_party_long:0 "Liberal State Party"
  HOL_fascism_party:0 "Fatherland Party"
@@ -610,8 +610,8 @@
  PHI_fascism_party_long:0 "Philippine Catholic Movement"
  ARG_communism_party:0 "Radical Civic Union"
  ARG_communism_party_long:0 "Radical Civic Union"
- ARG_neutrality_party:0 "Bonapartists"
- ARG_neutrality_party_long:0 "Platan Bonapartists"
+ ARG_neutrality_party:0 "De Tounens Loyalists"
+ ARG_neutrality_party_long:0 "House De Tounens Loyalists"
  ARG_democratic_party:0 "Concordancia"
  ARG_democratic_party_long:0 "Concordancia"
  ARG_fascism_party:0 "Autonomist Movement"
