--- a/localisation/english/replace/deluge_poland_content_l_english.yml
+++ b/localisation/english/replace/deluge_poland_content_l_english.yml
@@ -581,6 +581,13 @@
  black_cat_desc:0 "This person has black cat!"
  white_cat:0 "White Cat"
  white_cat_desc:0 "This person has white cat!"
+ revolutionary_committee:0 "Revolutionary Committe"
+ democratic_committee:0 "Democratic Committe"
+ party_discipline:0 "Party Discipline"
+ technocratic_tendencies:0 "Technocratic Tendencies"
+ militaristic_tendencies:0 "Militaristic Tendencies"
+ party_pluralism:0 "Party Pluralism"
+ central_planner_of_reality:0 "Central Planner of Reality"
  ###################EVENTS############################
  deluge_poland.1.t:0 "Question of flag"
  deluge_poland.1.d:0 "Now after we get rid of this useless monarch it’s time to decide what we do with the flag. Our pro-monarchist supporters and others who like eagle with crown may be upset about changing it, but on the other hand there are people who will agree with us."
@@ -917,6 +924,22 @@
  deluge_poland.87.b:0 "White cat"
  deluge_poland.87.c:0 "Black cat"
  deluge_poland.87.e:0 "Red cat"
+ deluge_poland.88.t:0 "New Party Name..."
+ deluge_poland.88.d:0 "After integration of PNS into our party many of it's members propose change of it's name. What should it be called?"
+ deluge_poland.88.a:0 "No change is needed."
+ deluge_poland.88.b:0 "NOP"
+ deluge_poland.88.c:0 "ONS"
+ deluge_poland.88.e:0 "RNS"
+ deluge_poland.89.t:0 "Creation of PZPR..."
+ deluge_poland.89.d:0 "PKWN turned out to be bad solution, but we have new idea - unification all workers' parties in Poland into one, centralized party with one leader. It's name will be PZPR - Polska Zjednoczona Partia Robotnicza (Polish United Workers' Party). We have to decided who will be leader of PZPR now..."
+ deluge_poland.89.a:0 "Anotni Ciszak"
+ deluge_poland.89.b:0 "Władysław Gomułka"
+ deluge_poland.89.c:0 "Zygmunt Marek"
+ deluge_poland.89.e:0 "Kazimierz Dagnan"
+ deluge_poland.90.t:0 "Central Planner finishes his work..."
+ deluge_poland.90.d:0 "Everything in our country was remade according to will of central planner [POL.GetLeader]. New order, totally controlled by state was created. All in the state, nothing outside the state, nothing against the state. However our central planner know that nothing is eternal, so he sooner or later will perish. Now he has choice: people should cultivate him more or cause more?"
+ deluge_poland.90.a:0 "The Cause!"
+ deluge_poland.90.b:0 "Central Planner!"
  deluge_poland_foreign.1.t:0 "Defense Pact with [POL.GetName]?"
  deluge_poland_foreign.1.d:0 "Today [POL.GetName] prosposed us defence pact against [FRA.GetName], [SWE.GetName], Germany and [DEN.GetName]. If one of us is attacked then other comes to help."
  deluge_poland_foreign.1.a:0 "That sounds like good idea."
@@ -1151,8 +1174,8 @@
  ################NATIONAL SPIRITS###########
  old_wettyn_king:0 "Fryderyk August I Wettyn"
  old_wettyn_king_desc:0 "Old king Fryderyk I Wettyn is the king of Polish Empire. He led Poland into Great War and after that to save his power he shared it with Sejm. After it he slowly was becoming less and less important until now, when he's a popular figurehead to keep nation together."
- new_wettyn_king:0 "Fryderyk Krystian II Wettyn"
- new_wettyn_king_desc:0 "Second son of the previous king of Poland. He is very brave and wants to change the country, even if it means going against Sanation Government."
+ fryderyk_ii_idea:0 "Fryderyk Krystian II Wettyn"
+ fryderyk_ii_idea_desc:0 "Second son of the previous king of Poland. He is very brave and wants to change the country, even if it means going against Sanation Government."
  new_wettyn_king_figurehead:0 "Fryderyk Krystian II Wettyn"
  new_wettyn_king_figurehead_desc:0 "Second son of the previous king of Poland. He is very brave and wants to change the country. Hopefully people changed the country and he doesn't need to be anything more than figurehead."
  new_wettyn_king_sikorski:0 "Fryderyk Krystian II Wettyn"
@@ -1181,8 +1204,8 @@
  moblised_the_masses_desc:0 "People of this country need to prepare to sacrifice themselves for the good of [POL.GetName]! No matter how horrific the situation may be!"
  cult_of_new_marshal_idea:0 "Cult of Two Marshalls"
  cult_of_new_marshal_idea_desc:0 ""
- state_that_gives:0 "A State that Gives"
- state_that_gives_desc:0 "We shall not forget that our first priority is good living of our great citizens! We should give them evrything they need - education and healthcare at first!"
+ POL_state_that_gives_idea:0 "A State that Gives"
+ POL_state_that_gives_idea_desc:0 "We shall not forget that our first priority is good living of our great citizens! We should give them evrything they need - education and healthcare at first!"
  churches_owned_national_spirit:0 "Churches Nationalized"
  churches_owned_national_spirit_desc:0 "We confiscated properties of this fake institution. We can use it."
  culture_not_race_national_spirit:0 "Culture - not Race"
@@ -1335,6 +1358,8 @@
  POL_politically_active_society_desc:0 "If we want to move closer to democracy we should promote political activness and awarness among society."
  POL_smigly_nuz_w_bzuhu_idea:0 "Nuż w Bżuhu"
  POL_smigly_nuz_w_bzuhu_idea_desc:0 ""Nuż w Bżuhu" is futuristic magazine where many poets publish their "art". However we already have big influence there. We can influence what will be written in there. We can use futurists' obsession with technology, speed and cars to promote some knowledge about it."
+ POL_nuz_w_bzuhu_idea:0 "Nuż w Bżuhu"
+ POL_nuz_w_bzuhu_idea_desc:0 ""Nuż w Bżuhu" is futuristic magazine that gained popularity after futurists were integrated into our government."
  POL_concessions_to_christians_idea:0 "Concessions to Christians"
  POL_concessions_to_christians_idea_desc:0 "We got rid of futurist menance, but still we need more support from people. We can give some concessions to chrisitians to decrease their resistance and gain more support."
  POL_vatican_support_idea:0 "Vatican Support"
@@ -1376,6 +1401,26 @@
  POL_christian_socialist_realism_idea_desc:0 ""
  POL_SCh_influence:0 "SCh Influence"
  POL_SCh_influence_desc:0 ""
+ POL_anarchists_in_government:0 "Anarchists in Government"
+ POL_anarchists_in_government_desc:0 ""
+ POL_national_radicals_in_government:0 "PNS influence"
+ POL_national_radicals_in_government_desc:0 ""
+ POL_centralization_and_discipline_idea:0 "Centralization and Discipline"
+ POL_centralization_and_discipline_idea_desc:0 ""
+ POL_local_initiatives_idea:0 "Local Initiatives"
+ POL_local_initiatives_idea_desc:0 ""
+ POL_centrally_planned_economy_idea:0 "Centrally Planned Economy"
+ POL_centrally_planned_economy_idea_desc:0 ""
+ POL_centrally_planned_selection_idea:0 "Centrally Planned Selection"
+ POL_centrally_planned_selection_idea_desc:0 ""
+ POL_centrally_planned_society_idea:0 "Centrally Planned Society"
+ POL_centrally_planned_society_idea_desc:0 ""
+ POL_centrally_planned_art_idea:0 "Centrally Planned Art"
+ POL_centrally_planned_art_idea_desc:0 ""
+ POL_centrally_planned_man_idea:0 "Centrally Planned Man"
+ POL_centrally_planned_man_idea_desc:0 ""
+ POL_centrally_planned_reality_idea:0 "Centrally Planned Reality"
+ POL_centrally_planned_reality_idea_desc:0 ""
  #########DECISION'S CATEGORIES###################
  integration_category:0 "Integration"
  integration_category_desc:0 "To achieve greatness we must “convince” other cultures and races about our dominant position in the world. We cannot let them exist, they must become Poles to assure our dominant position in this brutal world, where bigger groups prey upon weaker ones."
@@ -1892,7 +1937,7 @@
  POL_custom_effect_tooltip_186:0 "If §GPSL§! has been chosen:\nModify §HDemocracy Reborn§! national spirit by:\nTrade Opinion Factor: §R-35%§!\nConsumer Goods Factor: §H+2%§!\nConstruction Speed: §G+5%§!!\n\nIf §RPPS§! has been chosen:\nModify §HNew System§! by:\nTrade Opinion Factor: §R-45%§!\nConsumer Goods Factor: §H+5%§!\nConstruction Speed: §G+10%§!\nFactory Output: §G+3%§!\nDockyard Output: §G+3%§!!"
  POL_custom_effect_tooltip_187:0 "Modify §HDemocracy Reborn§! national spirit by:\nProduction Efficiency Cap: §G+3%§!\nConsumer Goods Factor: §H-5%§!\nFactory Output: §G+5%§!\nDockyard Output: §G+5%§!!"
  POL_custom_effect_tooltip_188:0 "Unlocks decisions to gain new allies, start wars, increase cooperation within the [POL.GetFactionName] and manage your puppets!"
- POL_custom_effect_tooltip_189:0 "Unlocks decisions to expand and improve new economic union! Adds new national spirit that will be modified during reforms of economic union! If you will be alone in your faction or you will stop being faction leader you will loose all bonuses and get temporary penalties!"
+ POL_custom_effect_tooltip_189:0 "Unlocks decisions to expand and improve new economic union! Adds new national spirit that will be modified during reforms of economic union! If you will be alone in your faction (you have 2 years to find members) or you will stop being faction leader you will loose all bonuses and get temporary penalties!"
  POL_custom_effect_tooltip_190:0 "Unlocks decisions to spread revolution and expand your faction!"
  POL_custom_effect_tooltip_191:0 "Add new national spirit that will be modified during reforms started by Poland! If you didn't join while reform took place you can still join it!"
  POL_custom_effect_tooltip_192:0 "The more reforms you accept the bigger penalty for leaving Polish faction will be!"
@@ -1927,6 +1972,23 @@
  POL_custom_effect_tooltip_221:0 "Modify §HNew Five Year Plan§! by:\nFactory Output: §G+3%§!\nConstruction Speed: §G+3%§!\nMonthly Population: §G+5%§!!"
  POL_custom_effect_tooltip_222:0 "Modify §HNew Five Year Plan§! by:\nStability: §R-10%§!\nWar Support: §R-10%§!\nConstruction Speed: §G+5%§!!"
  POL_custom_effect_tooltip_223:0 "Modify §HNew Five Year Plan§! by:\nBuilding Slots: §R-5%§!\nMonthly Population: §G+5%§!\nFactory Output: §G+5%§!\nPolitical Power Gain Daily: §G+5%§!\nRadicalism Drift Daily: §G+0,05§!!"
+ POL_custom_effect_tooltip_224:0 "Modify §HNew Five Year Plan§! by:\nProduction Efficiency Cap: §G+10%§!\nProduction Efficiency Growth: §R-10%§!!"
+ POL_custom_effect_tooltip_225:0 "Modify §HNew Five Year Plan§! by:\nProduction Efficiency Cap: §R-10%§!\nProduction Efficiency Growth: §G+10%§!!"
+ POL_custom_effect_tooltip_226:0 "Modify §HNew System§! by:\nResearch Speed: §G+4%§!!"
+ POL_custom_effect_tooltip_227:0 "Modify §HNew System§! by:\nRadicalism Drift Daily: §G+0,03§!\nIdeology Drift Defence: §G+20%§!!"
+ POL_custom_effect_tooltip_228:0 "Modify §HNew System§! by:\nRecruitable Population Factor: §G+6%§!!"
+ POL_custom_effect_tooltip_229:0 "Modify §HNew System§! by:\nImprove Relations Cost: §G-20%§!\nOpinion Gain Monthly: §G+15%§!!"
+ POL_custom_effect_tooltip_230:0 "Modify §HNew System§! by:\nRecruitable Population Factor: §G+3%§!!"
+ POL_custom_effect_tooltip_231:0 "Add §HLabour Reforms§! national spirit that gives:\nFactory Output: §G+2%§!\nDockyard Output: §G+2%§!!"
+ POL_custom_effect_tooltip_232:0 "Modify §HLabour Reforms§! by:\nProduction Efficiency Cap: §G+5%§!\nFactory Output: §R-5%§!\nDockyard Output: §R-5%§!!"
+ POL_custom_effect_tooltip_233:0 "Modify §HLabour Reforms§! by:\nProduction Efficiency Cap: §R-5%§!\nFactory Output: §G+5%§!\nDockyard Output: §G+5%§!!"
+ POL_custom_effect_tooltip_234:0 "Modify §HLabour Reforms§! by:\nStability: §G+5%§!\nWar Support: §G+5%§!\nPolitical Power Gain Daily: §G+5%§!!"
+ POL_custom_effect_tooltip_235:0 "Modify §HLabour Reforms§! by:\nStability: §R-10%§!\nFactory Output: §G+5%§!\nDockyard Output: §G+5%§!!"
+ POL_custom_effect_tooltip_236:0 "Modify §HLabour Reforms§! by:\nStability: §G+5%§!\nProduction Efficiency Cap: §G+3%§!\nProduction Efficiency Growth: §G+3%§!!"
+ POL_custom_effect_tooltip_237:0 "Modify §HLabour Reforms§! by:\nConstruction Speed: §G+10%§!\nFactory Output: §G+7%§!\nDockyard Output: §G+7%§!!"
+ POL_custom_effect_tooltip_238:0 "Modify §HLabour Reforms§! by:\nResearch Speed: §G+3%§!\nProduction Efficiency Cap: §G+4%§!!"
+ POL_custom_effect_tooltip_239:0 "Modify §HLabour Reforms§! by:\nBuilding Slots: §G+5%§!\nConstruction Speed: §G+5%§!!"
+ POL_custom_effect_tooltip_240:0 "All national spirits that were aquired in this part of tree are merged. These spirits are:\n§HCentrally Planned Economy\nCentrally Planned Art\nCentrally Planned Man\nCentrally Planned Selection\nCentrally Planned Society§!!\nThey are merged into §HCentrally Planned Reality§! national spirit that gives all previous bonuses and additional:\nConsumer Goods: §H-3%§!\nConstruction Speed: §G+2%§!\nFactory Output: §G+1%§!\nDockyard Output: §G+1%§!\nMonthly Population: §G+2%§!\nResearch Speed: §G+1%§!\nRecruitable Population: §H-1%§!\nRecruitable Population Factor: §G+9%§!!"
  POL_custom_trigger_tooltip_POL:0 "Owns and controls all of starting territories of Poland!"
  POL_custom_trigger_tooltip_1:0 "§8WP§! has at least 30 power and it's power is bigger than §5POW's§! power."
  POL_custom_trigger_tooltip_2:0 "§5POW§! has at least 30 power and it's power is bigger than §8WP's§! power."
@@ -1978,6 +2040,10 @@
  POL_european_cooperation_desc:0 "European Cooperation is key to peace, succcess and prosperity!"
  POL_new_system:0 "New System"
  POL_new_system_desc:0 "Poland has reached new system, never seen before in this country."
+ POL_labour_reforms:0 "Labour Reforms"
+ POL_labour_reforms_desc:0 "Poland introduced new labour reforms."
+ POL_new_five_year_plan_modifier:0 "New Five Year Plan"
+ POL_new_five_year_plan_modifier_desc:0 "Previous plan of Eugeniusz Kwiatowski was too capitalistic and didn't supported workers at all. We need to create new plan."
  ##########FLAGS#######################
  POL_invites_someone:0 "Poland already takes diplomatic action"
  POL_invite_radicals:0 "Radicals were invited to coaltion"
@@ -2089,6 +2155,14 @@
  POL_morges_name_short:0 "Front Morges"
  POL_SL_name_long:0 "Stronnictwo Ludowe (People’s Party)"
  POL_SL_name_short:0 "SL"
+ POL_NOP_name_long:0 "Narodowy Obóz Pracy (National Labour Camp)"
+ POL_NOP_name_short:0 "NOP"
+ POL_ONS_name_long:0 "Obóz Narodowo-Społeczny (National-Social Camp)"
+ POL_ONS_name_short:0 "ONS"
+ POL_RNS_name_long:0 "Ruch Narodowej Spólnoty (Movement of National Community)"
+ POL_RNS_name_short:0 "RNS"
+ POL_PZPR_name_long:0 "Polska Zjednoczona Partia Robotnicza (Polish United Workers' Party)"
+ POL_PZPR_name_short:0 "PZPR"
  ####DESIGNERS###
  pzinz_designer:0 "PZInż"
  bbt_br_panc:0 "B.B.T.Br.Panc."
